[gd_scene load_steps=28 format=2]

[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/base-sheet.png" type="Texture" id=1]
[ext_resource path="res://game-assets/game-scripts/general-scripts/monitor-script.gd" type="Script" id=2]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/004.png" type="Texture" id=3]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/005.png" type="Texture" id=4]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/001.png" type="Texture" id=5]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/010.png" type="Texture" id=6]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/011.png" type="Texture" id=7]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/015.png" type="Texture" id=8]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/014.png" type="Texture" id=9]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/003.png" type="Texture" id=10]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/013.png" type="Texture" id=11]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/012.png" type="Texture" id=12]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/016.png" type="Texture" id=13]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/009.png" type="Texture" id=14]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/007.png" type="Texture" id=15]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/002.png" type="Texture" id=16]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/monitor-snow/006.png" type="Texture" id=17]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/objects-sprites/icons-sheet.png" type="Texture" id=18]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/objects-container/003.png" type="Texture" id=19]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/objects-container/004.png" type="Texture" id=20]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/objects-container/002.png" type="Texture" id=21]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/general-sprites/ItemBox/objects-container/001.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 16 ), null, null, ExtResource( 10 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 17 ), null, null, null, ExtResource( 15 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 13 ), null, null, null, null, null, null, null, null, null, null, null ],
"loop": true,
"name": "default",
"speed": 17.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13, 11 )

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.6 ),
"transitions": PoolRealArray( 0.5, 2, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ObjectNode:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( -2, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, -30 ), Vector2( 0, -30 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("ObjectNode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="ItemBox10Rings" type="Node2D"]
position = Vector2( 64, 50 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="base" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="Snow" type="AnimatedSprite" parent="base"]
position = Vector2( 0, -3 )
z_index = 3
frames = SubResource( 1 )
frame = 4
playing = true

[node name="ObjectNode" type="Node2D" parent="."]
position = Vector2( 0, -3 )

[node name="ObjectIndicator" type="Sprite" parent="ObjectNode"]
z_index = 2
texture = ExtResource( 18 )
hframes = 4
vframes = 5

[node name="ObjectContainer" type="AnimatedSprite" parent="ObjectNode"]
z_index = 1
frames = SubResource( 2 )
playing = true

[node name="HitBox" type="StaticBody2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
modulate = Color( 0.545098, 1, 0, 0.482353 )
shape = SubResource( 3 )

[node name="ExplodeArea" type="Area2D" parent="."]
visible = false
modulate = Color( 0.713726, 0.129412, 0.537255, 1 )
position = Vector2( 0, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplodeArea"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Jump = SubResource( 5 )

[connection signal="body_entered" from="ExplodeArea" to="." method="_on_ExplodeArea_body_entered"]
